resolved fdo#45239 EasyHack: use PNG instead of JPG in Calc to HTML export